--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		
 	</head>
 	<body>
- 		<div id="title_bar"><strong>tuita</strong></div>
+ 		<div id="title_bar"><strong>Tuita</strong></div>
 
-		<div id="welcome" class="view">
+		<div id="welcome" class="fullscrean">
             <div class="welcome_image">
                 <img id="welcome_image" src="assets/img/welcome.jpeg">
             </div>
