--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<div id="welcome" class="fullscrean">
             <div class="welcome_image">
-                <img id="welcome_image" src="assets/img/welcome.jpeg">
+                <img width="100%" id="welcome_image" src="assets/img/welcome.jpeg">
             </div>
 		</div>
 
