--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
             <div class="welcome_image">
                 <img width="100%" id="welcome_image" src="assets/img/welcome.jpeg">
             </div>
-		</div>
-
-		<div id="map" class="view">
-		  <div class="map_image">
-              <img id="static_map" src="assets/img/staticmap.png">
-		  </div>
-		  <p>This is where you are</p>
-		  <div class="app_button" id="welcome_button">Go Back</div>
+            <div class="mod_login"> 
+                <iframe width="100%" height="80" scrolling="no" allowtransparency="true"
+                    src="http://login.sdo.com/sdo/Login/LoginFrame.php?appDomain=tuita.com&appId=256&appArea=0&returnURL=http%3A%2F%2Fwww.tuita.com%2Flogin%3Frefer%3D&CSSURL=http%3A%2F%2Fwww.tuita.com%2Fhtml%2Fcss%2FIframeLogin.css%3F201105061022&autologinchecked=1&autologintime=14&autologintext=%E4%B8%A4%E5%91%A8%E5%86%85%E8%87%AA%E5%8A%A8%E7%99%BB%E5%BD%95&curURL=http%3A%2F%2Fwww.tuita.com%2Flogin&usernamePlaceHolder=%E6%89%8B%E6%9C%BA%2F%E9%82%AE%E7%AE%B1%2F%E4%B8%AA%E6%80%A7%E5%8C%96%E5%B8%90%E5%8F%B7"
+                    frameborder="0"></iframe> 
+            </div>
 		</div>
 
 		<div id="settings" class="view">
