--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 	<head>
-		<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" />
-		<title>Tuita</title>
+		<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" content="charset=UTF-8" />
+		<title>推他</title>
 		<link rel="stylesheet" href="assets/css/master.css" type="text/css" media="screen" />
 		
 		<script src="phonegap.js" type="text/javascript" charset="utf-8"></script>
@@ -23,7 +23,7 @@
 		
 	</head>
 	<body>
- 		<div id="title_bar"><strong>Tuita</strong></div>
+ 		<div id="title_bar"><strong>推他</strong></div>
 
 		<div id="welcome" class="fullscrean">
             <div class="welcome_image">
