rename for blackberry

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <div class="mod_login"> 
                 <!-- copy form login.html -->
 <div class="login_box_wrapper">
-<link rel="stylesheet" href="assets/css/login.sdo.css" type="text/css" />
+<link rel="stylesheet" href="assets/css/login@sdo.css" type="text/css" />
 <link rel="stylesheet" href="http://www.tuita.com/html/css/IframeLogin.css?201105061022" type="text/css" />
-<link rel="stylesheet" href="assets/css/login.tuita.app.css" type="text/css" />
+<link rel="stylesheet" href="assets/css/login@tuita.css" type="text/css" />
     <form name="form" id="form" method="post" action="https://dplogin.sdo.com/dispatchlogin.fcgi" target="_top" accept-charset="gb2312"> 
         <!-- data fields -->      
         <input type="hidden" name="username" id="username" value="" />
