--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 
 <div class="login_box_wrapper">
+<script src="assets/js/sdo/login.js" type="text/javascript" charset="utf-8"></script>
 <link rel="stylesheet" href="assets/css/login.sdo.css" type="text/css" />
 <link rel="stylesheet" href="http://www.tuita.com/html/css/IframeLogin.css?201105061022" type="text/css" />
 <link rel="stylesheet" href="assets/css/login.tuita.app.css" type="text/css" />
