--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
  		<div id="title_bar"><strong>推他</strong></div>
         -->
 
-		<div id="welcome" class="fullscreen">
+		<div id="welcome" class="view">
             <div class="welcome_image">
                 <img width="100%" id="welcome_image" src="assets/img/welcome.jpeg">
             </div>
             <p> checking login status... </p>
         </div>
 
-        <div id="login" class="fullscreen">
+        <div id="login" class="view">
             <div class="mod_login"> 
                 <div class="login_box_wrapper">
                     <link rel="stylesheet" href="assets/css/login@sdo.css" type="text/css" />
