--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="assets/js/lawnchair/adaptors/WebkitSQLiteAdaptor.js" type="text/javascript" charset="utf-8"></script>
 		<script src="assets/js/lawnchair/Lawnchair.js" type="text/javascript" charset="utf-8"></script>
 		<script src="assets/js/dsl.js" type="text/javascript" charset="utf-8"></script>
-		<script src="assets/js/jquery-1.6.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="assets/js/jquery.js" type="text/javascript" charset="utf-8"></script>
 
 		<script src="assets/js/app.js" type="text/javascript" charset="utf-8"></script>
         <!--
