add script load

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 		<script src="assets/js/sdo/login.js" type="text/javascript" charset="utf-8"></script>
         -->
 		<script src="assets/js/cookie.js" type="text/javascript" charset="utf-8"></script>
+		<script src="assets/js/debug.js" type="text/javascript" charset="utf-8"></script>
+		<script src="assets/js/login.js" type="text/javascript" charset="utf-8"></script>
+		<script src="assets/js/store.js" type="text/javascript" charset="utf-8"></script>
 		<script src="assets/js/tuita.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
