--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <label for="ptname" class="ptname_label" id="ptname_label">通行证:</label>
                             </div>
                             <div id="user_name_input" class="user_name_input">
-                                <input type="text" placeholder="手机/邮箱/个性帐号" class="ptname inputtxt" id="username" maxlength="50" name="password"   tabindex="1" autocomplete="off" />
+                                <input type="text" placeholder="手机/邮箱/个性帐号" class="ptname inputtxt" id="username" maxlength="50" name="username"   tabindex="1" autocomplete="off" />
                             </div>
                             <div id="user_pwd_title" class="user_pwd_title">
                                 <label for="ptpwd" class="ptpwd_label" id="ptpwd_label">密&nbsp;&nbsp;码:</label>
