--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
             </div>
             <p> checking login status... </p>
         </div>
+        <div id="home" class="view">
+            <p> welcome <strong id="user"></strong></p>
+        </div>
+
+
 
         <div id="login" class="view">
             <div class="mod_login"> 
