--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
             <div class="welcome_image">
                 <img width="100%" id="welcome_image" src="assets/img/welcome.jpeg">
             </div>
-            <p> checking login status... </p>
+            <p> try to login ... </p>
         </div>
         <div id="home" class="view">
             <p> welcome <strong id="user"></strong></p>
         </div>
 
+        <div id="logout" class="view">
+            <p> logout</p>
+        </div>
 
 
         <div id="login" class="view">
