--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </div>
         <div id="home" class="view">
             <p> welcome <strong id="user"></strong></p>
+            <p class='avatar' style=''> </p>
         </div>
 
         <div id="logout" class="view">
