--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width" content="charset=UTF-8" />
 		<title>推他</title>
 		<link rel="stylesheet" href="assets/css/master.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="assets/css/tuita_home.css" type="text/css" media="screen" />
 
 		<script src="phonegap.js" type="text/javascript" charset="utf-8"></script>
 		<script src="assets/js/xui.js" type="text/javascript" charset="utf-8"></script>
@@ -37,7 +38,9 @@
         </div>
         <div id="home" class="view">
             <p> welcome <strong id="user"></strong></p>
-            <p class='avatar' style=''> </p>
+            <div class='cell_my_avatar'>
+                <p class='avatar' style=''></p>
+            </div>
         </div>
 
         <div id="logout" class="view">
