--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@
                 <p class='avatar' style=''></p>
             </div>
             <article class="mod_feeds" id="feedBlock">
-                <h3 class="title">推他列表</h3>
-                <p class="empty" attr="inner:noFeed" style="display:none">暂时没有动态</p>
+            <div class="feed_group">
+                <div class="content">
+                    <div style="display: block;">
+                        <h3 class="title" style="display: block;">推他列表</h3>
+                        <p class="empty" attr="inner:noFeed" style="display:block">暂时没有动态</p>
+                    </div>
+                </div>
+            </div>
             </article>
 
         </div>
