--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class='cell_my_avatar'>
                 <p class='avatar' style=''></p>
             </div>
-            <article class="mod_feeds" id="feedBlock">
+            <article class="mod_feeds" id="feeds">
             <div class="feed_group">
                 <div class="content">
                     <div style="display: block;">
