--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>推他</title>
 		<link rel="stylesheet" href="assets/css/master.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="assets/css/tuita_home.css" type="text/css" media="screen" />
+        <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
 
 		<script src="phonegap.js" type="text/javascript" charset="utf-8"></script>
 		<script src="assets/js/xui.js" type="text/javascript" charset="utf-8"></script>
@@ -39,7 +40,8 @@
             <article class="mod_feeds" id="feeds">
             <div class="feed_group">
                 <div class="content">
-                    <div style="display: block;">
+                    <div style="feed">
+                        <div> abcdefghijklmnopqrstuvwxyz abcdefghijklmnopqrstuvwxyz abcdefghijklmnopqrstuvwxyz </div>
                         <p class="empty" attr="inner:noFeed" style="display:block">暂时没有动态</p>
                     </div>
                 </div>
@@ -59,7 +61,6 @@
                     <link rel="stylesheet" href="assets/css/login@sdo.css" type="text/css" />
                     <!-- this need to auto update -->
                     <link rel="stylesheet" href="http://www.tuita.com/html/css/IframeLogin.css?201105061022" type="text/css" />
-                    <link rel="stylesheet" href="assets/css/login@tuita.css" type="text/css" />
                     <form name="login_form" id="login_form" method="post" action="" accept-charset="utf8"> 
                         <!-- data fields -->      
                         <input type="hidden" name="templateId" id="templateId" value="" />
