--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
 
-        <div id="login" class="view">
+        <div id="login" class="view" style='display: block'>
             <div class="mod_login"> 
                 <div class="login_box_wrapper">
                     <!-- this need to auto update -->
