add support browser

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 </div>
             </div>
             </article>
-
         </div>
 
         <div id="logout" class="view">
+            <div></div>
             <p> logout</p>
         </div>
 
@@ -102,4 +102,5 @@
         </div> 
 
 	</body>
+		<script src="assets/js/init.js" type="text/javascript" charset="utf-8"></script>
 </html>
