--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 
 
         <div id="login" class="view">
+            <div class="welcome_image">
+                <img width="100%" id="welcome_image" src="assets/img/welcome.jpeg">
+            </div>
+ 
             <div class="mod_login"> 
                 <div class="login_box_wrapper">
                     <!-- this need to auto update -->
